# ladybird-windows

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: windows.yml
bootstrap/: CMakeLists.txt  main_win.cpp
platform/: CMakeLists.txt
platform/core/include/: lb_platform.h
platform/include/: lb_platform.h
platform/src/: win_eventloop.cpp  win_fs.cpp  win_platform.cpp  win_tasks.cpp  win_timers.cpp  win_window_gdi.cpp
platform/win32/src/: win_clipboard.cpp  win_eventloop.cpp  win_fs.cpp  win_log.cpp  win_net.cpp  win_platform.cpp  win_tasks.cpp  win_timers.cpp  win_window_d3d.cpp  win_window_gdi.cpp  win_window_internal.h
